Closed
Bug 1491846
Opened 6 years ago
Closed 6 years ago
GetFrameLoader inside child objects vtbls could not be resolved by linker in mingw-clang build
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla64
People
(Reporter: tjr, Assigned: tjr)
References
Details
Attachments
(1 file)
46 bytes,
text/x-phabricator-request
|
smaug
:
review+
lizzard
:
approval-mozilla-esr60+
|
Details | Review |
No description provided.
Assignee | ||
Comment 1•6 years ago
|
||
Assignee | ||
Comment 2•6 years ago
|
||
Without this patch we get these errors:
> lld-link: error: undefined symbol: __ZThn88_N22nsObjectLoadingContent14GetFrameLoaderEv
> >>> referenced by ../../dom/html/Unified_cpp_dom_html0.o:(__ZTVN7mozilla3dom16HTMLEmbedElementE)
> lld-link: error: undefined symbol: __ZThn76_N25nsGenericHTMLFrameElement14GetFrameLoaderEv
> >>> referenced by ../../dom/html/Unified_cpp_dom_html1.o:(__ZTVN7mozilla3dom16HTMLFrameElementE)
> >>> referenced by ../../dom/html/Unified_cpp_dom_html1.o:(__ZTVN7mozilla3dom17HTMLIFrameElementE)
> lld-link: error: undefined symbol: __ZThn80_N25nsGenericHTMLFrameElement14GetFrameLoaderEv
> >>> referenced by ../../dom/html/Unified_cpp_dom_html1.o:(__ZTVN7mozilla3dom16HTMLFrameElementE)
> >>> referenced by ../../dom/html/Unified_cpp_dom_html1.o:(__ZTVN7mozilla3dom17HTMLIFrameElementE)
> lld-link: error: undefined symbol: __ZThn88_N22nsObjectLoadingContent14GetFrameLoaderEv
> >>> referenced by ../../dom/html/Unified_cpp_dom_html2.o:(__ZTVN7mozilla3dom17HTMLObjectElementE)
This is might be a clang bug? I'm not sure if this is a patch we want to take; but it would unblock the mingw x86 build.
Component: General: Unsupported Platforms → DOM
Product: Firefox Build System → Core
Assignee | ||
Comment 3•6 years ago
|
||
:smaug, assuming I fix up the commit message, what do you think of this patch?
Flags: needinfo?(bugs)
Comment 4•6 years ago
|
||
How super weird. Why GetFrameLoader needs special handling but InternalSetFrameLoader doesn't.
Flags: needinfo?(bugs)
Comment 5•6 years ago
|
||
Why HTMLIFrameElement doesn't need the same stuff, even though the error seems to hint it would need?
Comment 6•6 years ago
|
||
Comment on attachment 9009652 [details]
Bug 1491846 GetFrameLoader inside child objects vtbls could not be resolved by linker. It looks like a clang bug, but requires closer look. I worked around it by having explicit forwards. r=Alex_Gaynor
Olli Pettay [:smaug] (r- if the bug doesn't explain what the change(s) are about.) has approved the revision.
Attachment #9009652 -
Flags: review+
Updated•6 years ago
|
Priority: -- → P2
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Pushed by aiakab@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1d61cb1fb3d2
GetFrameLoader inside child objects vtbls could not be resolved by linker. It looks like a clang bug, but requires closer look. I worked around it by having explicit forwards. r=smaug
Keywords: checkin-needed
Comment 8•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Assignee | ||
Comment 9•6 years ago
|
||
Comment on attachment 9009652 [details]
Bug 1491846 GetFrameLoader inside child objects vtbls could not be resolved by linker. It looks like a clang bug, but requires closer look. I worked around it by having explicit forwards. r=Alex_Gaynor
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: Needed to fix the mingw-clang build for esr60
User impact if declined: Tor will have to carry this patch themselves, and we won't be able to run mingw-clang in automation.
Fix Landed on Version: 64.0a1 / 20180919123806
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): We're only providing forwarding method stubs.
String or UUID changes made by this patch:
Attachment #9009652 -
Flags: approval-mozilla-esr60?
Updated•6 years ago
|
status-firefox-esr60:
--- → affected
tracking-firefox-esr60:
--- → 64+
Comment 10•6 years ago
|
||
Comment on attachment 9009652 [details]
Bug 1491846 GetFrameLoader inside child objects vtbls could not be resolved by linker. It looks like a clang bug, but requires closer look. I worked around it by having explicit forwards. r=Alex_Gaynor
Let's uplift; support for better build automation for esr60 + downstream builds.
Attachment #9009652 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Comment 11•6 years ago
|
||
bugherder uplift |
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•