Bug 1491846 - GetFrameLoader inside child objects vtbls could not be resolved by linker. It looks like a clang bug, but requires closer look. I worked around it by having explicit forwards. r=smaug, a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D6051

--HG--
extra : source : 1d61cb1fb3d24fc0032936190e75d0a44b8d05c0