dom/html/HTMLEmbedElement.h
@@ -129,6 +129,8 @@ public:
    */
   void StartObjectLoad(bool aNotify, bool aForceLoad);
 
+  NS_FORWARD_NSIFRAMELOADEROWNER(nsObjectLoadingContent::)
+
 protected:
   // Override for nsImageLoadingContent.
   nsIContent* AsContent() override { return this; }
