dom/html/HTMLFrameElement.h
@@ -113,6 +113,8 @@ public:
   using nsGenericHTMLFrameElement::GetContentDocument;
   using nsGenericHTMLFrameElement::GetContentWindow;
 
+  NS_FORWARD_NSIFRAMELOADEROWNER(nsGenericHTMLFrameElement::)
+
 protected:
   virtual ~HTMLFrameElement();
 
