dom/html/HTMLObjectElement.h
@@ -245,6 +245,8 @@ public:
    */
   void StartObjectLoad(bool aNotify, bool aForceLoad);
 
+  NS_FORWARD_NSIFRAMELOADEROWNER(nsObjectLoadingContent::)
+
 protected:
   // Override for nsImageLoadingContent.
   nsIContent* AsContent() override { return this; }
